# custom_user

./: README.md  db.sqlite3  pyproject.toml
custom_user/: settings.py  urls.py
myuser/: admin.py  forms.py  models.py  views.py
myuser/migrations/: 0001_initial.py  0002_remove_myuser_user_name.py  0003_auto_20200824_1909.py  0004_auto_20200825_1353.py
templates/: generic_form.html  index.html
