[tool.poetry]
name = "custom_user"
version = "0.1.0"
description = "Custom User Assignment"
authors = ["Ruben Espino <56930001+r-o-e-574@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
